--- a/Cipriano20211961.tex
+++ b/Cipriano20211961.tex
@@ -12,7 +12,7 @@
 %TCIDATA{Version=5.50.0.2953}
 %TCIDATA{<META NAME="SaveForMode" CONTENT="1">}
 %TCIDATA{BibliographyScheme=BibTeX}
-%TCIDATA{LastRevised=Monday, May 19, 2025 15:17:02}
+%TCIDATA{LastRevised=Monday, May 19, 2025 15:27:02}
 %TCIDATA{<META NAME="GraphicsSave" CONTENT="32">}
 %TCIDATA{ComputeDefs=
 %$R$
@@ -36,8 +36,9 @@ Tecnol\'{o}gico Nacional de M\'{e}xico / Instituto Tecnol\'{o}gico de Tijuana%
 }
 \maketitle
 
-\noindent \textbf{Palabras clave: }Palabra clave 1; Palabra clave 2; Palabra
-clave 3; Palabra clave 4; Palabra clave 5.
+\noindent \textbf{Palabras clave: }Din\'{a}mica no lineal; Ecuaciones
+diferenciales ordinarias; Estabilidad; Interacci\'{o}n celular; Sistema
+inmune; 
 
 \noindent Correo: \textbf{l20211961@tectijuana.edu.mx}
 
